--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -3,11 +3,21 @@
   padding-top: 16px;
   padding-bottom: 16px;
   border-bottom: 1px solid #E8E8E8;
+  transition: all .2s linear;
   @media(max-width: 991px){
     border-bottom: 1px solid var(--gray3);
     padding-top: 0;
     padding-bottom: 0;
     margin-bottom: 0;
+  }
+  &.fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: #fff;
+    z-index: 4;
+    transition: all .2s linear;
   }
 
   .container {
@@ -27,6 +37,9 @@
   }
 
   &W {
+    max-width: 1375px;
+    margin-left: auto;
+    margin-right: auto;
     @media(max-width: 991px) {
       padding: 8px 8px 8px 16px;
     }
