--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -26,7 +26,7 @@ $black: 900;
   --dark-blue: #020094;
   --white: #fff;
   --gray5: #666;
-  --gray4: #22215a;
+  --gray4: #AEAEAE;
   --gray3: #e8e8e8;
   --gray2: #f1f1f1;
   --gray1: #fafafa;
