--- a/src/scss/components/catalog.scss
+++ b/src/scss/components/catalog.scss
@@ -20,6 +20,7 @@
   &--array {
     background-color: var(--gray2);
     border: none;
+    pointer-events: none;
   }
 }
 
@@ -140,9 +141,16 @@
     border-radius: 8px;
   }
   .carLogo {
-    border: none;
+    // border: none;
     padding-left: 24px;
     padding-right: 24px;
+  }
+}
+.news--page {
+  .catLogoW {
+    .carLogo {
+      border: none;
+    }
   }
 }
 
