--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -144,6 +144,7 @@
   background-color: #fff;
   width: 100%;
   z-index: 2;
+  box-shadow: 0 -4px 4px 0 rgba(0, 0, 0, 0.08);
 
   @media(max-width: 991px) {
     display: flex;
