--- a/src/scss/specifications.scss
+++ b/src/scss/specifications.scss
@@ -198,6 +198,8 @@ section {
       transition: border-color .2s linear;
       border-top-left-radius: 4px;
       border-bottom-left-radius: 4px;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
     }
   }
   &:nth-child(2){
@@ -205,6 +207,8 @@ section {
       transition: border-color .2s linear;
       border-top-right-radius: 4px;
       border-bottom-right-radius: 4px;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
     }
   }
 
@@ -1075,4 +1079,12 @@ a.color-blue {
   @media(max-width: 991px){
     font-size: 14px;
   }
+}
+.form-floating {
+  .formSelect {
+    padding-left: 10px;
+  }
+}
+.form-select:focus {
+  box-shadow: none;
 }
