--- a/src/scss/specifications.scss
+++ b/src/scss/specifications.scss
@@ -989,6 +989,12 @@ a.color-blue {
     }
   }
 }
+.auctionSect {
+  .paramItem{
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+}
 
 .paramList--hide-w {
   &.active {
